--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Nathaniel Green | Web Developer</title>
+  <title>Nat Green | Web Developer</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Dosis|Noto+Sans|Raleway"
@@ -17,7 +17,7 @@
   <div class="container">
     <!-- Headers -->
     <div class="headers">
-      <h1 class="header--main">Nathaniel Green</h1>
+      <h1 class="header--main">Nat Green</h1>
       <h3 class="header--small">Web Developer based in Berlin, DE.</h3>
     </div>
     <!-- Headers End -->
@@ -48,6 +48,5 @@
     </div>
     <!-- Links End -->
   </div>
-  <iframe src="http://dandi.ngreen.io"></iframe>
 </body>
 </html>
