--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Headers -->
     <div class="headers">
       <h1 class="header--main">Nat Green</h1>
-      <h3 class="header--small">Web Developer based in Berlin, DE.</h3>
+      <h3 class="header--small">Web Developer based in London, UK.</h3>
     </div>
     <!-- Headers End -->
     <!-- Links -->
