--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
           <img class="link__img" src="images/github.svg" />
           Github
         </a>
+        <a class="link" target="_blank" href="https://gitlab.com/nathanielgreen/">
+          <img class="link__img" src="images/gitlab.svg" />
+          Gitlab
+        </a>
         <a class="link" target="_blank" href="https://github.com/nathanielgreen/CV">
           <img class="link__img" src="images/file.svg" />
           CV
