Adding dev.to profile. Removing blog link.

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
           <img class="link__img" src="images/user.svg" />
           LinkedIn
         </a>
-        <a class="link" target="_blank" href="https://medium.com/@nathanielgreen">
-          <img class="link__img" src="images/type.svg" />
-          Blog
+        <a class="link" target="_blank" href="https://dev.to/nathanielgreen">
+          <img class="link__img" src="images/code.svg" />
+          Dev.to
         </a>
     </div>
     <!-- Links End -->
