Adding correct LinkedIn URL

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         </a>
         <a class="link"
           target="_blank"
-          href="https://www.linkedin.com/in/nathaniel-green-727263107/">
+          href="www.linkedin.com/in/nathaniel-g-727263107">
+        >
           <img class="link__img" src="images/user.svg" />
           LinkedIn
         </a>
